--- a/eme-observer/eoml.html
+++ b/eme-observer/eoml.html
@@ -2258,7 +2258,7 @@
           value: index,
           borderColor: 'black',
           borderWidth: 2,
-          label: { enabled: false }
+          label: { enabled: true }
         }
       };
 
