--- a/eme-observer/eoml copy 8.html
+++ b/eme-observer/eoml copy 8.html
@@ -2926,87 +2926,61 @@
         return hours * 12;
     }
 
-                                            function getSkedAnnotations(dateStr, qthLat, qthLon, dxLat, dxLon) {
-                                                const annotations = {};
+    function getSkedAnnotations(dateStr, qthLat, qthLon, dxLat, dxLon) {
+        const annotations = {};
+        const targetDateStr = dateStr.slice(0, 10);
+        const jsDate = new Date(`${dateStr}T00:00:00Z`);
+        const astroTime = Astronomy.MakeTime(jsDate);
 
-                                                const qthLoc = document.getElementById('qth').value.trim().toUpperCase();
-                                                const dxLoc  = document.getElementById('dx').value.trim().toUpperCase();
+        const qthObserver = new Astronomy.Observer(qthLat, qthLon, 0);
+        const dxObserver = new Astronomy.Observer(dxLat, dxLon, 0);
 
-                                                if (!qthLoc || !dxLoc || !/^[A-R]{2}[0-9]{2}[A-X]{2}$/.test(qthLoc) || !/^[A-R]{2}[0-9]{2}[A-X]{2}$/.test(dxLoc)) {
-                                                    return annotations;
-                                                }
+        let qthRiseEvent = null, qthSetEvent = null, dxRiseEvent = null, dxSetEvent = null;
+        try {
+            qthRiseEvent = Astronomy.SearchRiseSet(Astronomy.Body.Moon, qthObserver, +1, astroTime, 1.0);
+            qthSetEvent = Astronomy.SearchRiseSet(Astronomy.Body.Moon, qthObserver, -1, astroTime, 1.0);
+            dxRiseEvent = Astronomy.SearchRiseSet(Astronomy.Body.Moon, dxObserver, +1, astroTime, 1.0);
+            dxSetEvent = Astronomy.SearchRiseSet(Astronomy.Body.Moon, dxObserver, -1, astroTime, 1.0);
+        } catch (e) {
+            console.warn(`Error calculating moonrise/set: ${e.message}`);
+            return annotations;
+        }
 
-                                                const windows = getCommonWindows(qthLoc, dxLoc, dateStr);
-                                                if (windows.length === 0) return annotations;
+        function formatTimeUTC(date) {
+            if (!date) return 'N/A';
+            return `${String(date.getUTCHours()).padStart(2, '0')}:${String(date.getUTCMinutes()).padStart(2, '0')}z`;
+        }
 
-                                                const baseDate = new Date(`${dateStr}T00:00:00Z`);
-                                                const baseDay = baseDate.getUTCDate();
+        function timeToChartIndex(date) {
+            if (!(date instanceof Date)) return null;
+            const hours = date.getUTCHours() + date.getUTCMinutes() / 60 + date.getUTCSeconds() / 3600;
+            let index = Math.round(hours * 12);
+            if (index < 0) index = 0;
+            if (index > 287) index = 287;
+            return index;
+        }
 
-                                                function suffixFor(dateObj) {
-                                                    const d = dateObj.getUTCDate();
-                                                    if (d === baseDay) return "";
-                                                    return d > baseDay ? "(+1)" : "(-1)";
-                                                }
+        let skedStartTime = null, skedEndTime = null;
+        if (qthRiseEvent && qthSetEvent && dxRiseEvent && dxSetEvent &&
+            qthRiseEvent.date && qthSetEvent.date && dxRiseEvent.date && dxSetEvent.date) {
+            const qthRise = qthRiseEvent.date;
+            const qthSet = qthSetEvent.date;
+            const dxRise = dxRiseEvent.date;
+            const dxSet = dxSetEvent.date;
 
-                                                function formatTimeUTC(date) {
-                                                    return `${String(date.getUTCHours()).padStart(2, '0')}:${String(date.getUTCMinutes()).padStart(2, '0')}z`;
-                                                }
+            const isSameDay = (date) => date.toISOString().slice(0, 10) === targetDateStr;
 
-                                                function timeToChartIndex(date) {
-                                                    const hours = date.getUTCHours() + date.getUTCMinutes() / 60;
-                                                    return hours * 12;
-                                                }
+            if (isSameDay(qthRise) && isSameDay(qthSet) && isSameDay(dxRise) && isSameDay(dxSet)) {
+                // Sked start is the later of the two rise times
+                skedStartTime = qthRise > dxRise ? qthRise : dxRise;
+                // Sked end is the earlier of the two set times
+                skedEndTime = qthSet < dxSet ? qthSet : dxSet;
+            }
+        }
 
-                                                windows.forEach((window, i) => {
-                                                    const startIdx = timeToChartIndex(window.start);
-                                                    const endIdx   = timeToChartIndex(window.end);
-
-                                                    const startTimeStr = formatTimeUTC(window.start) + suffixFor(window.start);
-                                                    const endTimeStr   = formatTimeUTC(window.end)   + suffixFor(window.end);
-
-                                                    // Start line (green)
-                                                    annotations[`skedStart${i}`] = {
-                                                        type: 'line',
-                                                        scaleID: 'x',
-                                                        value: startIdx,
-                                                        borderColor: 'rgba(0, 180, 0, 0.9)',
-                                                        borderWidth: 2,
-                                                        borderDash: [6, 4],
-                                                        label: {
-                                                            content: `Start ${i+1}: ${startTimeStr}`,
-                                                            enabled: true,
-                                                            position: 'top',
-                                                            backgroundColor: 'rgba(0, 140, 0, 0.9)',
-                                                            color: 'white',
-                                                            font: { size: 10, weight: 'bold' },
-                                                            padding: 4,
-                                                            cornerRadius: 4
-                                                        }
-                                                    };
-
-                                                    // End line (red)
-                                                    annotations[`skedEnd${i}`] = {
-                                                        type: 'line',
-                                                        scaleID: 'x',
-                                                        value: endIdx,
-                                                        borderColor: 'rgba(200, 0, 0, 0.9)',
-                                                        borderWidth: 2,
-                                                        borderDash: [6, 4],
-                                                        label: {
-                                                            content: `End ${i+1}: ${endTimeStr}`,
-                                                            enabled: true,
-                                                            position: 'top',
-                                                            backgroundColor: 'rgba(180, 0, 0, 0.9)',
-                                                            color: 'white',
-                                                            font: { size: 10, weight: 'bold' },
-                                                            padding: 4,
-                                                            cornerRadius: 4
-                                                        }
-                                                    };
-                                                });
-
-                                                return annotations;
-                                            }
+        // No annotations for sked start/end as per user request
+        return annotations;
+    }
 
                                             function getCommonWindows(qthLoc, dxLoc, dateStr) {
                                                 // Validation
